--- a/app/assets/stylesheets/visits.css.scss
+++ b/app/assets/stylesheets/visits.css.scss
@@ -77,11 +77,14 @@
   float: left;
   margin-right: 5px;
 }
-#activity-chart .activity-chart-legend .delivered {
+#activity-chart .activity-chart-legend .visited {
   background-color: rgba(220,220,220,0.5);
 }
-#activity-chart .activity-chart-legend .clicked {
+#activity-chart .activity-chart-legend .delivered {
   background-color: rgba(151,187,205,0.5);
+}
+#activity-chart .activity-chart-legend .clicked {
+  background-color: rgba(151,187,205,1);
 }
 
 #store_path_graph_container {
@@ -95,17 +98,6 @@
   margin-right: 15px;
   margin-bottom: 15px;
   padding: 10px;
-  .clicked, .delivered {
-    font-style: italic;
-    margin-top: 5px;
-    color: #fff;
-  }
-  .clicked {
-    background-color: #666;
-  }
-  .delivered {
-    background-color: #ccc;
-  }
 }
 .coupon-text {
   margin-top: 20px;
